[SYNCOPE-1894] fixing IT test build (#1138)